  * Document keyboard shortcuts for enabling/disabling the screen reader
  and pull-down terminal. Closes (LP: #1560208)
  * Correct workspace switching description.
  * Correct grammar in various places.
  * Add Belarusian (be_BY) translation.
  * Add French (fr_FR) translation.
  * Add German (de) translation.
  * Add Spanish (es_ES) translation.
  * Tidied Keyboard Shortcuts into a table.
  * Prevent text overlapping in System Specifications.
  * Add ConvertAll, FreeCiv and Tux Paint to Software Boutique.
  * Enable Kodi for Xenial.
  * Replace Parcellite with Diodon.

 -- Martin Wimpress <code@flexion.org>  Fri, 18 Mar 2016 20:28:14 +0000

ubuntu-mate-welcome (16.04.5) xenial; urgency=medium

  * Fix missing images in version 16.04.4. Closes (LP: #1558983)
  * Fix Codecs installation. Closes (LP: #1558986)
  * Add Chinese (zh_TW) translation.
  * Update English (en_GB) translation.
  * Correct English grammar.
  * Enable Simple Screen Recorder for Xenial.
  * Update copyright attributions.
  * Process with wrap-and-sort.
  * Closes (LP: #1558989)

 -- Martin Wimpress <code@flexion.org>  Fri, 18 Mar 2016 00:58:10 +0000

ubuntu-mate-welcome (16.04.4) xenial; urgency=medium

  * Fix splash screen flicker. Closes (LP: #1549072)
  * Fix system information.
  * Fix subscription updates.
  * Fix Abobe Flash.
  * Fix Dropbox.
  * Fix Google Chrome, i386 repository is no longer available.
  * Fix LibreOffice upgrades.
  * Fix Murmur, which was referenced but missing.
  * Fix RedNoteBook.
  * Fix Upgrade System, so it is compatible with Ubuntu MATE Base.
  * Add framework for accepting translations.
  * Add Ardour, Corebird, Gajim, GNOME Software, Gpick, Time Tracker,
  MuseScore, Nuvola Player, OBS Studio, Pinta, Subsurface, SparkleShare,
  Vivaldi, Wireshark and Zenmap.
  * Update ubuntu-make PPA.
  * Update Software to consistenly use the name Software Boutique.
  * Update copyright attributions.
  * Whitespace cleanup.
  * Closes (LP: #1556869)
