@@ -14,7 +14,8 @@ ubuntu-mate-welcome (16.04.6~xenial1.7) xenial; urgency=medium
   * Add French (fr_FR) translation.
   * Add German (de) translation.
   * Add Spanish (es_ES) translation.
-  * Tidied Keyboard Shortcuts into a table.
+  * Visual improvements to Keyboard Shortcuts and
+  System Specifications page.
   * Prevent text overlapping in System Specifications.
   * Add ConvertAll, FreeCiv and Tux Paint to Software Boutique.
   * Enable Kodi for Xenial.
